--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Bostami - About Page Two</title>
+    <title>Exclusive Institute Of Fashion And Art</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/logo.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -40,8 +40,8 @@
                         <!-- logo -->
                         <div class="col-lg-2 col-md-6 col-sm-4 col-4 d-flex align-items-center">
                             <div class="bostami-header-logo">
-                                <a class="site-logo" href="../index.html">
-                                    <img src="assets/img/logo/logo-2.png" alt="">
+                                <a class="site-logo" href="index.html">
+                                    <img src="assets/img/logo/logo.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
                                     <nav class="bastami-main-menu main_menu_2">
                                         <ul>
                                             <li>
-                                                <a href="home-2.html">
+                                                <a href="index.html">
                                                     <span>
 
                                                         <i class="fa-light fa-house"></i>
@@ -62,7 +62,7 @@
                                                 </a>
                                             </li>
                                             <li class="active">
-                                                <a href="about-2.html">
+                                                <a href="about.html">
                                                     <span>
                                                         <i class="fa-light fa-address-card"></i>
                                                     </span>
@@ -70,7 +70,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="resume-2.html">
+                                                <a href="resume.html">
                                                     <span>
                                                         <i class="fa-light fa-file-user"></i>
                                                     </span>
@@ -78,7 +78,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="portfolio-2.html">
+                                                <a href="portfolio.html">
                                                     <span>
                                                         <i class="fa-light fa-briefcase"></i>
                                                     </span>
@@ -86,7 +86,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="blog-2.html">
+                                                <a href="blog.html">
                                                     <span>
                                                         <i class="fa-light fa-newspaper"></i>
                                                     </span>
@@ -94,7 +94,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="contact-2.html">
+                                                <a href="contact.html">
                                                     <span>
                                                         <i class="fa-light fa-address-book"></i>
                                                     </span>
@@ -155,7 +155,7 @@
                             <!-- img -->
                             <div class="col-lg-4 col-md-8">
                                 <div class="bostami-parsonal-info-img">
-                                    <img src="assets/img/parsonal-info/parson-img-2.png" alt="">
+                                    <img src="assets/img/about/about.jpg" alt="">
                                 </div>
                             </div>
 
@@ -184,7 +184,7 @@
                                                     </div>
                                                     <div class="text">
                                                         <span>Phone</span>
-                                                        <p>+123 456 7890</p>
+                                                        <p>+92 321-3438315</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -195,7 +195,7 @@
                                                     </div>
                                                     <div class="text">
                                                         <span>Email</span>
-                                                        <p>example@mail.com</p>
+                                                        <p>exclusiveinformation531@gmail.com</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -206,18 +206,18 @@
                                                     </div>
                                                     <div class="text">
                                                         <span>Location</span>
-                                                        <p>Hong kong china</p>
+                                                        <p>135-A, Ahmed Block New Garden Town Lahore</p>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-md-6">
                                                 <div class="bostami-parsonal-info-contact-item calendar">
                                                     <div class="icon">
-                                                        <i class="fa-light fa-calendar-days"></i>
+                                                        <i class="fa-light fa-mouse-pointer"></i>
                                                     </div>
                                                     <div class="text">
-                                                        <span>Birthday</span>
-                                                        <p>May 27, 1990</p>
+                                                        <span>Website</span>
+                                                        <a href="https://eifa.art/" target="_blank">www.eifa.art</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -336,7 +336,7 @@
                             <!-- section title -->
                             <div class="col-12">
                                 <div class="bostami-section-title-wrap text-center mb-35">
-                                    <h2 class="section-title">Clients</h2>
+                                    <h2 class="section-title">Collaboration</h2>
                                 </div>
                             </div>
 
@@ -349,25 +349,31 @@
                                             <!-- single item -->
                                             <div class="swiper-slide">
                                                 <img class="bostami-client-slider-logo"
-                                                    src="assets/img/client/client-logo-1.png" alt="">
+                                                    src="assets/img/collab/1.png" alt="">
                                             </div>
 
                                             <!-- single item -->
                                             <div class="swiper-slide">
                                                 <img class="bostami-client-slider-logo"
-                                                    src="assets/img/client/client-logo-2.png" alt="">
+                                                    src="assets/img/collab/2.png" alt="">
                                             </div>
 
                                             <!-- single item -->
                                             <div class="swiper-slide">
                                                 <img class="bostami-client-slider-logo"
-                                                    src="assets/img/client/client-logo-3.png" alt="">
+                                                    src="assets/img/collab/3.png" alt="">
                                             </div>
 
                                             <!-- single item -->
                                             <div class="swiper-slide">
                                                 <img class="bostami-client-slider-logo"
-                                                    src="assets/img/client/client-logo-4.png" alt="">
+                                                    src="assets/img/collab/4.png" alt="">
+                                            </div>
+
+                                            <!-- single item -->
+                                            <div class="swiper-slide">
+                                                <img class="bostami-client-slider-logo"
+                                                     src="assets/img/collab/5.png" alt="">
                                             </div>
 
                                         </div>
@@ -380,10 +386,7 @@
                     </div>
 
                     <!-- footer -->
-                    <div class="footer-copyright text-center pt-25 pb-25">
-                        <span>© 2024 All Rights Reserved by <a href="https://themeforest.net/user/elite-themes24"
-                                target="_blank" rel="noopener noreferrer">elite-themes24</a>.</span>
-                    </div>
+                    <div class="footer-copyright text-center pt-25 pb-25"></div>
 
                 </div>
             </div>
