--- a/blog-details.html
+++ b/blog-details.html
@@ -470,10 +470,7 @@
         <!-- footer start -->
         <div class="footer-area">
             <div class="container">
-                <div class="footer-wrap text-center">
-                    <span>© 2024 All Rights Reserved by <a href="https://themeforest.net/user/elite-themes24" target="_blank"
-                            rel="noopener noreferrer">elite-themes24</a>.</span>
-                </div>
+                <div class="footer-wrap text-center"></div>
             </div>
         </div>
         <!-- footer end -->
