--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@
                                             <li class="active">
                                                 <a href="index.html">
                                                     <span>
-
                                                         <i class="fa-light fa-house"></i>
                                                     </span>
                                                     home
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="about-2.html">
+                                                <a href="about.html">
                                                     <span>
                                                         <i class="fa-light fa-address-card"></i>
                                                     </span>
@@ -70,7 +69,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="resume-2.html">
+                                                <a href="resume.html">
                                                     <span>
                                                         <i class="fa-light fa-file-user"></i>
                                                     </span>
@@ -78,7 +77,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="portfolio-2.html">
+                                                <a href="portfolio.html">
                                                     <span>
                                                         <i class="fa-light fa-briefcase"></i>
                                                     </span>
@@ -86,7 +85,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="blog-2.html">
+                                                <a href="blog.html">
                                                     <span>
                                                         <i class="fa-light fa-newspaper"></i>
                                                     </span>
@@ -94,7 +93,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="contact-2.html">
+                                                <a href="contact.html">
                                                     <span>
                                                         <i class="fa-light fa-address-book"></i>
                                                     </span>
@@ -144,7 +143,7 @@
 
                             <!-- img -->
                             <div class="bostami-parsonal-info-img">
-                                <img src="assets/img/parsonal-info/parson-img-3.png" alt="">
+                                <img src="assets/img/home/profile.jpg" alt="">
                             </div>
 
                             <!-- name -->
