--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
                                                     </div>
                                                     <div class="text">
                                                         <span>Email</span>
-                                                        <p>exclusiveinformation531@gmail.com</p>
+                                                        <p><small>exclusiveinformation531@gmail.com</small></p>
                                                     </div>
                                                 </div>
                                             </div>
