--- a/contact.html
+++ b/contact.html
@@ -231,10 +231,7 @@
                     </div>
 
                     <!-- footer -->
-                    <div class="footer-copyright text-center pt-25 pb-25 bg-light-white-2 border-redius-20">
-                        <span>© 2024 All Rights Reserved by <a href="https://themeforest.net/user/elite-themes24"
-                                target="_blank" rel="noopener noreferrer">elite-themes24</a>.</span>
-                    </div>
+                    <div class="footer-copyright text-center pt-25 pb-25 bg-light-white-2 border-redius-20"></div>
 
                 </div>
             </div>
