--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
                                     <!-- signle item -->
                                     <div class="isotop-item mockup logo">
                                         <div class="fillter-item bg-prink">
-                                            <a class="img" href="" data-bs-toggle="modal" data-bs-target="#portfolio-1">
+                                            <a class="img" href="" data-module_name="chul_urina" data-bs-toggle="modal" data-bs-target="#portfolio-1">
                                                 <img src="assets/img/work/work-img-1.png" alt="">
                                             </a>
                                             <span class="item-subtitle">Travel Landing , UX/UI </span>
@@ -180,7 +180,7 @@
                                     <!-- signle item -->
                                     <div class=" isotop-item design mockup">
                                         <div class="fillter-item bg-catkrill">
-                                            <a class="img" href="" data-bs-toggle="modal" data-bs-target="#portfolio-1">
+                                            <a class="img" href="" data-module_name="aura_dione" data-bs-toggle="modal" data-bs-target="#portfolio-1">
                                                 <img src="assets/img/work/work-img-2.png" alt="">
                                             </a>
                                             <span class="item-subtitle">Travel Landing , UX/UI </span>
@@ -274,62 +274,7 @@
 
                     <div class="modal-body">
 
-                        <h6 class="blog-title">
-                            Chul urina
-                        </h6>
-
-                        <div class="portfolio-modal-table">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h3 class="portfolio-modal-table-text">
-                                        <i class="fa-regular fa-file-lines"></i>
-                                        Project : <span>Website</span>
-                                    </h3>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="portfolio-modal-table-text">
-                                        <i class="fa-regular fa-user "></i>
-                                        Client : <span>Envato</span>
-                                    </h3>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="portfolio-modal-table-text">
-                                        <i class="fa-solid fa-code"></i>
-                                        Langages : <span> Photoshop, Figma</span>
-                                    </h3>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="portfolio-modal-table-text">
-                                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                                        Preview : <a href="#">www.envato.com</a>
-                                    </h3>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="h1-modal-paragraph">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga consequatur delectus porro
-                                sapiente molestias, magni quasi sed, enim corporis omnis doloremque soluta inventore
-                                dolorum conseqr quo obcaecati rerum sit non. Lorem ipsum dolor, sit amet consectetur
-                                adipisicing elit. Fuga consequatur delectus porro sapiente molestias, magni quasi sed,
-                                enim corporis omnis doloremque soluta inventore dolorum consequuntur quo obcaecati rerum
-                                sit non.</p>
-
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga consequatur delectus porro
-                                sapiente molestias, magni quasi sed, enim corporis omnis doloremque soluta inventore
-                                dolorum consetur quo obcaecati rerum sit non. Lorem ipsum dolor, sit amet consectetur
-                                adipisicing elit. Fuga consequatur delectus porro sapiente molestias, magni quasi sed,
-                                sit amet consectetur adipisicing elit. Fuga consequatur delectus porro sapiente
-                                molestias, magni quasi sed, enim corporis omnis doloremque soluta inventore dolorum
-                                consequuntur.</p>
-
-                        </div>
-                        <div class="h1-modal-img">
-                            <img src="assets/img/work/portfolio-modal-img-1.jpg" alt="">
-                        </div>
-
                     </div>
-
                 </div>
             </div>
         </div>
@@ -348,6 +293,7 @@
     <script src="assets/js/odometer.min.js"></script>
     <script src="assets/js/appear.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/modal.js"></script>
 </body>
 
 </html>
