--- a/about.html
+++ b/about.html
@@ -105,10 +105,10 @@
                                     </nav>
                                 </div>
                                 <div class="bostami-header-menu-btn text-right ml-30">
-                                    <div class="dark-btn dark-btn-2">
-                                        <i class="fa-light fa-moon dark-btn-icon"></i>
-                                        <i class="fa-light fa-sun dark-btn-icon"></i>
-                                    </div>
+<!--                                    <div class="dark-btn dark-btn-2">-->
+<!--                                        <i class="fa-light fa-moon dark-btn-icon"></i>-->
+<!--                                        <i class="fa-light fa-sun dark-btn-icon"></i>-->
+<!--                                    </div>-->
                                     <div class="menu-btn-wrap d-lg-none">
                                         <div class="menu-btn menu-btn-2 toggle_menu">
                                             <span></span>
@@ -376,6 +376,16 @@
                                                      src="assets/img/collab/5.png" alt="">
                                             </div>
 
+                                            <div class="swiper-slide">
+                                                <img class="bostami-client-slider-logo"
+                                                     src="assets/img/collab/6.png" alt="">
+                                            </div>
+
+                                            <div class="swiper-slide">
+                                                <img class="bostami-client-slider-logo"
+                                                     src="assets/img/collab/7.png" alt="">
+                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -394,9 +404,6 @@
 
 
     </div>
-
-
-
 
     <!-- JS here -->
     <script src="assets/js/jquery.min.js"></script>
