--- a/blog.html
+++ b/blog.html
@@ -105,10 +105,10 @@
                                     </nav>
                                 </div>
                                 <div class="bostami-header-menu-btn text-right ml-30">
-                                    <div class="dark-btn dark-btn-2">
-                                        <i class="fa-light fa-moon dark-btn-icon"></i>
-                                        <i class="fa-light fa-sun dark-btn-icon"></i>
-                                    </div>
+<!--                                    <div class="dark-btn dark-btn-2">-->
+<!--                                        <i class="fa-light fa-moon dark-btn-icon"></i>-->
+<!--                                        <i class="fa-light fa-sun dark-btn-icon"></i>-->
+<!--                                    </div>-->
                                     <div class="menu-btn-wrap d-lg-none">
                                         <div class="menu-btn menu-btn-2 toggle_menu">
                                             <span></span>
